[package]
name = "pathbufd"
version = "0.1.4"
edition = "2021"
description = "PathBuf with Display + formatting macro"
authors = ["trisuaso", "caffeineee"]
repository = "https://github.com/trisuaso/pathbufd"
license = "MIT"

[dependencies]
serde = { version = "1.0.216", features = ["derive"] }

[lib]
doctest = false
